# warsztaty-dzien-drugi

./: README.md
mini-bank/backend/: .dockerignore  Dockerfile  pyproject.toml
mini-bank/backend/alembic/: env.py
mini-bank/backend/alembic/versions/: 067db81ef933_v3_phase_5a_consents.py  0d08c76b856b_v3_phase_3_sca_challenges_notifications.py  2e5ec2a8fd53_v2_audit_log_jit_access_grants.py  3b03352b7de3_polish_transactions_recipient_name.py  5ef62e676536_v3_phase_4_users_last_login_at_last_.py  68a6a8ad7f90_v3_phase_2_idempotency_keys.py  792744b29afd_v3_phase_1_audit_log_hash_chain.py  85ad02d8da7a_v3_phase_5b_transactions_dual_approval_.py  a321068c2f18_initial_users_accounts_transactions.py  c4d2f1a8e9b3_add_transaction_category.py
mini-bank/backend/src/minibank/: __init__.py  accounts.py  audit.py  config.py  deps.py  fraud_score.py  interest.py  main.py  timezone_check.py
mini-bank/backend/tests/: conftest.py  test_audit.py  test_category_service.py  test_fraud_score.py  test_interest.py  test_timezone.py  test_transfers.py
mini-bank/backend/tests/e2e/: test_concurrent_api.py  test_jit_flow.py
mini-bank/backend/tests/integration/: test_access_grants_api.py  test_accounts_summary.py  test_agent_customer_data.py  test_aml_threshold.py  test_app_smoke.py  test_audit_log_immutable.py  test_audit_verify_api.py  test_audited_decorator.py  test_consents.py  test_deps.py  test_dual_control.py  test_iban_api.py  test_notifications_me.py  test_sca_flow.py  test_step_up_api.py  test_transfer_service.py  test_transfers_audited.py  test_transfers_idempotency.py
(+150 files in other folders)
