[project]
name = "minibank"
version = "0.2.0"
description = "Interactive mBank workshop demo — FastAPI + SQLAlchemy + React"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "bcrypt>=4.2",
    "pyjwt>=2.10",
    "python-multipart>=0.0.20",
    "faker>=30.0",
    "email-validator>=2.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = ["planted: marker for intentionally-failing tests on main branch"]

[tool.ruff]
line-length = 100
target-version = "py312"
